# InternNav_HZJ

./: .gitignore
changelog/: 2026-3-6.md  2026-3-7.md
changelog/2026-3-10/: manager_update.txt  technical_trace.md
changelog/2026-3-11/: manager_update.txt  technical_trace.md
changelog/2026-3-12/: manager_update.txt  technical_trace.md
docs/: bridge_gap_analysis.md  bridge_interface_spec.md  dualvln_habitat_architecture.md  dualvln_havln_adapter_plan.md  dualvln_havln_dualprocess_runbook.md  dualvln_inference_optimization_plan.md  dualvln_kv_cache_experiment_plan.md  havln_bench_status.md  havln_http_bridge_summary.md  offline_replay_strict_reproduction_plan.md
internnav/agent/: internvla_n1_agent_realworld.py
internnav/env/: __init__.py  habitat_env.py  havln_http_env.py
internvla_runtime/: CMakeLists.txt  DEPLOY.md  README_ARCH.md  gen_proto.sh  gen_proto_cpp.sh  readme.txt
internvla_runtime/cpp/server/: main.cpp
internvla_runtime/proto/: internvla.proto
internvla_runtime/python/: client_example.py  internvla_pb2.py  internvla_pb2_grpc.py  worker_server.py
scripts/eval/: eval.py
scripts/realworld/: RVIZ2_VERIFY.md  analyze_frame_logs.py  controllers.py  grpc_internvla_client.py  http_internvla_client.py  http_internvla_server.py  requirements_grpc_client.txt  修改说明文档.md  学长反馈执行指南.md
test_data/20260306_221707/: llm_output_ 002.txt  llm_output_ 016.txt  llm_output_ 022.txt  llm_output_ 028.txt  llm_output_ 052.txt  llm_output_ 058.txt  llm_output_ 088.txt  llm_output_ 106.txt  llm_output_ 130.txt  llm_output_ 136.txt  llm_output_ 152.txt  (+4 more)
(+1379 files in other folders)
